--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,6 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
-
-
 	<parent>
 
 		<groupId>org.springframework.boot</groupId>
@@ -26,13 +24,11 @@
 		</repository>
 	</repositories>
 
-
-
 	<groupId>com.example</groupId>
-	<artifactId>africastalking-api-demo</artifactId>
+	<artifactId>Frauddetection</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>africastalking-api-demo</name>
-	<description>Demo project for africas talking project</description>
+	<description>online fraud detection system</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -47,11 +43,20 @@
 		<url/>
 	</scm>
 	<dependencies>
+
+
+		<dependency>
+			<groupId>jakarta.annotation</groupId>
+			<artifactId>jakarta.annotation-api</artifactId>
+			<version>2.1.1</version>
+		</dependency>
+
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 
 		<dependency>
 			<groupId>com.github.AfricasTalkingLtd.africastalking-java</groupId>
@@ -59,7 +64,10 @@
 			<version>3.4.11</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
